Fixed mobile resizing issues, moved project heading inside the box to create more even spacing between sections

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -111,7 +111,7 @@
   flex-flow: row;
   flex-wrap: wrap;
   columns: 2;
-  margin: 4rem 0;
+  margin: 2rem 0 1rem 0;
   justify-content: space-between;
   align-items: center;
   width: 84vw;
@@ -163,12 +163,20 @@
     width: 100vw;
     display: flex;
   }
-  .sfContainer{
-    position: relative;
+  .skillsContainer{
+    flex-direction: column;
+    width: 100vw;
+
+  }
+
+  .postHolder{
+    width: 100vw;
+    flex-direction: column;
+    height: fit-content;
   }
 
   .main{
-    min-height:max-content ;
+    min-height:max-content;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -178,7 +186,7 @@
     
     
   }
-  .content, .quote, .sfPic, .primeResume, .quoteContainer{
+  .content, .quote, .sfPic, .primeResume, .skillsContainer{
     width: 100vw;
     margin: 2rem 0 0 0;
   }
